fix: addresses layout issues for description in image slider
- affects image sliders seen in MultiPlantLocationInfo, OtherInterventionInfo, and ProjectInfo
- affects mobile and non mobile layouts

--- a/src/features/projectsV2/MobileInfoSwiper/MobileInfoSwiper.module.scss
+++ b/src/features/projectsV2/MobileInfoSwiper/MobileInfoSwiper.module.scss
@@ -54,6 +54,16 @@
     border-top-right-radius: 0;
   }
 
+  :global(.image-slider-container) {
+    :global(.single-carousel-image) {
+      padding: 15px;
+    }
+
+    :global(.image-description) {
+      padding-bottom: 20px;
+    }
+  }
+
   :global(.plant-location-header-container),
   :global(.single-plant-location-heading) {
     padding: 12px 20px;
